<resources>
    <string name="app_name">NotUygulamasi</string>
    <string name="hello_blank_fragment">Merhaba boş fragment</string>
    <string name="title">Başlık</string>
    <string name="description">Açıklama</string>
    <string name="cancel">İptal</string>
    <string name="add">Ekle</string>
    <string name="save_to">Kaydet</string>
    <string name="select_date">Tarih Seç</string>
    <string name="textview">Metin Görüntüleyici</string>
    <string name="delete">Sil</string>
    <string name="date">Tarih</string>
    <string name="detail">Detay</string>
</resources>
